<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <ImageView 
        android:id="@+id/image_show"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/app_name"
        />
    
    <LinearLayout 
        android:id="@+id/buttonGroup"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:visibility="gone"
        >

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/common_btn_selector"
            android:text="@string/save_pic" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:background="@drawable/common_btn_selector"
            android:text="@string/cancel" />
        
    </LinearLayout>
    

</FrameLayout>