<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <ImageView
        android:id="@+id/show_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/help2" />

    <RelativeLayout
        android:id="@+id/tv_infos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/show_image" >
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/tel_and_book_container"
        android:layout_width="fill_parent"
        android:layout_height="34.0dip"
        android:layout_below="@id/show_image" >

        <ImageView
            android:id="@+id/horizontal_line"
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:layout_gravity="center_vertical"
            android:background="@drawable/common_divider_line" 
            android:contentDescription="@string/app_name"
            />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/horizontal_line"
            android:layout_marginBottom="3.0dip"
            android:paddingLeft="5.0dip"
            android:paddingRight="5.0dip" >

            <RelativeLayout
                android:id="@+id/button_route_layout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@drawable/listitem_bottom_button_selector"
                android:clickable="true" >

                <Button
                    android:id="@+id/button_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:focusable="false"
                    android:drawableLeft="@drawable/upload"
                    android:text="@string/uploadImages"
                    android:textColor="#ff666666"
                    android:textSize="12.0dip" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/vertical_line1"
                android:layout_width="1.0px"
                android:layout_height="20.0dip"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="4.0dip"
                android:background="@drawable/vertial_divider_line" 
                android:contentDescription="@string/divider"
                />

            <RelativeLayout
                android:id="@+id/button_call_layout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@drawable/listitem_bottom_button_selector"
                android:clickable="true" >

                <Button
                    android:id="@+id/button_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:clickable="false"
                    android:focusable="true"
                    android:paddingLeft="15dp"
                    android:text="@string/delete"
                    android:drawableLeft="@drawable/delete"
                    android:textColor="#ff666666"
                    android:textSize="12.0dip" />
            </RelativeLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/horizontal_line2"
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:background="@drawable/common_divider_line" 
            android:contentDescription="@string/divider"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/tv_infos"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="3" >

        <TextView
            android:id="@+id/tv_inspecttablename"
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="#ff333333"
            android:textSize="17.0dip" />

        <TextView
            android:id="@+id/tv_inspectitemname"
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="5dp"
            android:textColor="#ff999999"
            android:textSize="14.0dip" />

        <TextView
            android:id="@+id/tv_inspecttime"
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="5dp"
            android:textColor="#ff999999"
            android:textSize="14.0dip" />
    </LinearLayout>

</RelativeLayout>