<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffededed"
    android:minHeight="64.0dip" >

    <include
        android:id="@+id/common_topbar_upload"
        layout="@layout/common_top_bar_upload" />

    <RelativeLayout
        android:id="@+id/all_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/common_topbar_upload"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="10.0dip"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:background="#fffefefe"
            android:paddingBottom="6.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="6.0dip" >

            <TextView
                android:id="@+id/tableName_upload"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_margin="5dp"
                android:gravity="center"
                android:singleLine="true"
                android:textColor="#ff333333"
                android:textSize="20.0dip" />

            <RelativeLayout
                android:id="@+id/RatingItem"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tableName_upload"
                android:layout_below="@id/tableName_upload"
                android:layout_marginTop="8.0dip" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <RelativeLayout
                        style="@style/common_card_layout.margin_L_R"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/common_listitem_singleline_high"
                        android:background="@drawable/common_listitem_top_selector" >

                        <TextView
                            android:id="@+id/company_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10.0dip"
                            android:text="@string/userName"
                            android:textColor="#ff333333"
                            android:textSize="16.0dip" />

                        <TextView
                            android:id="@+id/userName_upload"
                            style="?android:attr/textViewStyle"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10.0dip"
                            android:layout_marginRight="10.0dip"
                            android:layout_toRightOf="@id/company_name"
                            android:background="@null"
                            android:ellipsize="marquee"
                            android:gravity="center"
                            android:maxLines="1"
                            android:textColor="#ff999999"
                            android:textSize="14.0dip" />

                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="1.0px"
                            android:layout_alignParentBottom="true"
                            android:layout_marginLeft="10.0dip"
                            android:layout_marginRight="10.0dip"
                            android:background="@drawable/common_divider_line"
                            android:contentDescription="@string/app_name" />
                    </RelativeLayout>

                    <RelativeLayout
                        style="@style/common_card_layout.margin_L_R"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/common_listitem_singleline_high"
                        android:background="@drawable/common_listitem_middle_selector" >

                        <TextView
                            android:id="@+id/inspecttime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10.0dip"
                            android:text="@string/inspectTime"
                            android:textColor="#ff333333"
                            android:textSize="16.0dip" />

                        <TextView
                            android:id="@+id/inspectTime_upload"
                            style="?android:attr/textViewStyle"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10.0dip"
                            android:layout_marginRight="10.0dip"
                            android:layout_toRightOf="@id/inspecttime"
                            android:background="@null"
                            android:ellipsize="marquee"
                            android:gravity="center"
                            android:maxLines="1"
                            android:textColor="#ff999999"
                            android:textSize="14.0dip" />

                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="1.0px"
                            android:layout_alignParentBottom="true"
                            android:layout_marginLeft="10.0dip"
                            android:layout_marginRight="10.0dip"
                            android:background="@drawable/common_divider_line"
                            android:contentDescription="@string/app_name" />
                    </RelativeLayout>

                    <RelativeLayout
                        style="@style/common_card_layout.margin_L_R"
                        android:layout_width="fill_parent"
                        android:layout_height="140dp"
                        android:background="@drawable/common_listitem_bottom_selector" >

                        <TextView
                            android:id="@+id/filepath"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10.0dip"
                            android:text="@string/filePath"
                            android:textColor="#ff333333"
                            android:textSize="16.0dip" />

                        <TextView
                            android:id="@+id/filePath_upload"
                            style="?android:attr/textViewStyle"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10.0dip"
                            android:layout_marginRight="10.0dip"
                            android:layout_toRightOf="@id/filepath"
                            android:background="@null"
                            android:gravity="center"
                            android:maxLines="5"
                            android:textColor="#ff999999"
                            android:textSize="14.0dip" />

                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="1.0px"
                            android:layout_alignParentBottom="true"
                            android:layout_marginLeft="10.0dip"
                            android:layout_marginRight="10.0dip"
                            android:background="@drawable/common_divider_line"
                            android:contentDescription="@string/app_name" />
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tel_and_book_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dp" >

                <ImageView
                    android:id="@+id/horizontal_line1"
                    android:layout_width="fill_parent"
                    android:layout_height="1.0px"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/common_divider_line"
                    android:contentDescription="@string/app_name" />

                <LinearLayout
                    android:id="@+id/tag"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/horizontal_line1"
                    android:layout_marginTop="3.0dip"
                    android:paddingLeft="5.0dip"
                    android:paddingRight="5.0dip" >

                    <RelativeLayout
                        android:id="@+id/upload_now"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:background="@drawable/common_upload_button_selector"
                        android:clickable="true" >

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:background="@android:color/transparent"
                            android:clickable="false"
                            android:focusable="false"
                            android:text="@string/uploadNow"
                            android:textColor="#ff666666"
                            android:textSize="12.0dip" />
                    </RelativeLayout>

                    <ImageView
                        android:layout_width="1.0px"
                        android:layout_height="20.0dip"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="4.0dip"
                        android:background="@drawable/vertial_divider_line"
                        android:contentDescription="@string/divider" />

                    <RelativeLayout
                        android:id="@+id/upload_later"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:background="@drawable/common_upload_button_selector"
                        android:clickable="true" >

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:background="@android:color/transparent"
                            android:clickable="false"
                            android:focusable="false"
                            android:text="@string/uploadLater"
                            android:textColor="#ff666666"
                            android:textSize="12.0dip" />
                    </RelativeLayout>
                </LinearLayout>

                <ImageView
                    android:id="@+id/horizontal_line2"
                    android:layout_width="fill_parent"
                    android:layout_height="1.0px"
                    android:layout_below="@id/tag"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/common_divider_line"
                    android:contentDescription="@string/app_name" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>